fix issue in nav collapsing

--- a/static/css/main.css
+++ b/static/css/main.css
@@ -102,6 +102,7 @@ canvas:active{
 
 #header-main nav > ul{
   max-height:0px;
+  overflow:hidden;
   transition: max-height 0.4s;
   -webkit-transition: max-height 0.4s;
   -moz-transition: max-height 0.4s;
